# wf-exec

./: .gitignore  README.md  appveyor.yml  build.bat  classes.txt  pom.xml
src/main/native/: CMakeLists.txt  file-jni.cc  file.cc  file.h  jni-util.cc  jni-util.h  process-jni.cc  process.cc  process.h  util.cc  util.h
src/test/java/io/webfolder/winexec/: Example.java  Extract.java  TestProcess.java  WindowsShortPathTest.java
